update : (pindah fragment home & tambahKOnten)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/fragment_container"
-            android:name="com.example.tubes1.FragmentTambahKonten">
+            android:name="com.example.tubes1.FragmentHome">
         </androidx.fragment.app.FragmentContainerView>
     </RelativeLayout>
 
