--- a/app/src/main/res/layout/fragment_tambah_konten.xml
+++ b/app/src/main/res/layout/fragment_tambah_konten.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -8,14 +8,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal"
+        android:layout_marginBottom="12sp">
         <TextView
             android:id="@+id/btn_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/back"
             android:clickable="true"
-            android:layout_marginBottom="12sp"></TextView>
+            android:layout_weight="1"></TextView>
+
+        <TextView
+            android:id="@+id/button_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Save"
+            android:textAlignment="textEnd"></TextView>
+
+    </LinearLayout>
 
         <TextView
             android:id="@+id/txt_tambahDiary"
@@ -69,19 +80,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"></ImageView>
-    </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/kuning"
-        android:src="@drawable/save_button_baseline"
-        app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator.Medium"
-        >
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
-</RelativeLayout>
+</LinearLayout>
