--- a/app/src/main/res/layout/fragment_konten_diary.xml
+++ b/app/src/main/res/layout/fragment_konten_diary.xml
@@ -35,7 +35,7 @@
 
     <ImageView
         android:id="@+id/img_diary"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="20sp"
         android:layout_below="@+id/txt_judulDiary"></ImageView>
