--- a/app/src/main/res/layout/fragment_tambah_konten.xml
+++ b/app/src/main/res/layout/fragment_tambah_konten.xml
@@ -79,6 +79,7 @@
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="20sp"
             android:layout_gravity="center"></ImageView>
 
 </LinearLayout>
