--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,20 +10,54 @@
     tools:context=".MainActivity"
     android:background="@color/kuningMuda">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"></include>
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="12sp">
-        <androidx.fragment.app.FragmentContainerView
+        android:orientation="vertical">
+
+        <!--Toolbar-->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/kuning"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Light">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Photo Diary App"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:background="@color/kuning"
+                />
+        </androidx.appcompat.widget.Toolbar>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/fragment_container"
-            android:name="com.example.tubes1.FragmentHome">
-        </androidx.fragment.app.FragmentContainerView>
+            android:padding="12sp">
+            <androidx.fragment.app.FragmentContainerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/fragment_container"
+                android:name="com.example.tubes1.FragmentHome">
+            </androidx.fragment.app.FragmentContainerView>
+        </RelativeLayout>
+    </LinearLayout>
+
+<!--    Left Drawer-->
+    <RelativeLayout
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start" >
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fragment_container_left"
+            android:name="com.example.tubes1.FragmentSideMenu"></fragment>
     </RelativeLayout>
 
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
