--- a/app/src/main/res/layout/fragment_tambah_konten.xml
+++ b/app/src/main/res/layout/fragment_tambah_konten.xml
@@ -5,31 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button_save"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="12sp">
-        <TextView
-            android:id="@+id/btn_back"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/back"
-            android:clickable="true"
-            android:layout_weight="1"></TextView>
-
-        <Button
-            android:id="@+id/button_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/biru"
-            android:text="Save"
-            android:drawableLeft="@drawable/save_button_baseline"
-            android:drawableTint="@color/white"
-            android:textColor="@color/white"
-            ></Button>
-
-    </LinearLayout>
+        android:backgroundTint="@color/biru"
+        android:text="Save"
+        android:drawableLeft="@drawable/save_button_baseline"
+        android:drawableTint="@color/white"
+        android:textColor="@color/white"
+        android:layout_marginBottom="12sp"></Button>
 
         <TextView
             android:id="@+id/txt_tambahDiary"
