--- a/app/src/main/res/layout/fragment_tambah_konten.xml
+++ b/app/src/main/res/layout/fragment_tambah_konten.xml
@@ -63,7 +63,7 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="500px"
         android:layout_gravity="center"></ImageView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
