--- a/app/src/main/res/layout/fragment_sidemenu.xml
+++ b/app/src/main/res/layout/fragment_sidemenu.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/kuningMuda"
     android:padding="20sp">
 
     <TextView
@@ -14,7 +14,7 @@
         android:textSize="15dp"
         android:layout_marginTop="30dp"
         android:clickable="true"
-        android:padding="5sp"/>
+        android:padding="5sp" />
 
     <TextView
         android:id="@+id/btn_addDiary"
@@ -24,6 +24,6 @@
         android:textSize="15dp"
         android:layout_marginTop="40dp"
         android:padding="5sp"
-        android:clickable="true"/>
+        android:clickable="true" />
 
 </LinearLayout>
