--- a/app/src/main/res/layout/fragment_konten_diary.xml
+++ b/app/src/main/res/layout/fragment_konten_diary.xml
@@ -34,6 +34,7 @@
 
     <ImageView
         android:id="@+id/img_diary"
+        android:layout_gravity="left"
         android:layout_width="wrap_content"
         android:layout_height="800px"/>
 
