--- a/app/src/main/res/layout/fragment_detail_konten.xml
+++ b/app/src/main/res/layout/fragment_detail_konten.xml
@@ -20,6 +20,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="Click on Image to View!"
         android:textSize="10sp"
         android:layout_marginBottom="20dp"
@@ -40,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
+        android:textColor="@color/biru"
         android:text="Created on "/>
     <TextView
         android:id="@+id/story_detail"
