--- a/app/src/main/res/layout/fragment_sidemenu.xml
+++ b/app/src/main/res/layout/fragment_sidemenu.xml
@@ -3,18 +3,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/kuningMuda"
-    android:padding="20sp">
+    android:padding="20sp"
+    style="@style/SideBackground">
 
     <TextView
         android:id="@+id/btn_home"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Home"
         android:textSize="15dp"
         android:layout_marginTop="30dp"
         android:clickable="true"
-        android:padding="5sp" />
+        android:padding="5sp"/>
 
     <TextView
         android:id="@+id/btn_addDiary"
@@ -25,5 +25,26 @@
         android:layout_marginTop="40dp"
         android:padding="5sp"
         android:clickable="true" />
+
+    <LinearLayout
+        android:layout_marginTop="40dp"
+        android:padding="5sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dark_mode"
+            android:layout_marginRight="60dp"
+            android:textSize="15dp"></TextView>
+
+        <Switch
+            android:id="@+id/switch_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </Switch>
+    </LinearLayout>
 
 </LinearLayout>
