--- a/app/src/main/res/layout/fragment_detail_konten.xml
+++ b/app/src/main/res/layout/fragment_detail_konten.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/kuningMuda"
+    style="@style/Screen"
     android:orientation="vertical">
     <TextView
         android:id="@+id/btn_back"
@@ -60,7 +60,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/kuning"
+        style="@style/BtnBackground"
         android:src="@drawable/edit_icon_foreground" />
 
 
