--- a/app/src/main/res/layout/fragment_edit_konten.xml
+++ b/app/src/main/res/layout/fragment_edit_konten.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:text="Edit your diary"
         android:textSize="25sp"
-        android:textColor="@color/black"
+        style="@style/TextColor"
         android:textStyle="bold"
         android:layout_marginBottom="12sp"></TextView>
 
@@ -62,8 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Upload Picture"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/kuning"></Button>
+        style="@style/BtnBackground"></Button>
 
 
     <ImageView
@@ -78,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:backgroundTint="@color/biru"
+        style="@style/BtnBackground2"
         android:text="Update"
         android:textColor="@color/white"
         android:drawableLeft="@drawable/update_button_baseline"
