--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:text="@string/your_diary"
         android:textSize="25sp"
         android:layout_marginBottom="30dp"
-        android:textColor="@color/black"
+        style="@style/TextColor"
         android:textStyle="bold" />
 
     <GridView
@@ -34,7 +34,7 @@
         android:layout_marginTop="16sp"
         android:layout_marginEnd="16sp"
         android:layout_marginBottom="16sp"
-        android:backgroundTint="@color/kuning"
+        style="@style/BtnBackground"
         android:src="@drawable/plus_button_baseline_add"
         app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator.Medium" />
 </RelativeLayout>
