--- a/app/src/main/res/layout/fragment_tambah_konten.xml
+++ b/app/src/main/res/layout/fragment_tambah_konten.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="Add your diary"
         android:textSize="25sp"
-        android:textColor="@color/black"
+        style="@style/TextColor"
         android:textStyle="bold"
         android:layout_marginBottom="12sp"></TextView>
 
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:text="Upload Picture"
         android:textColor="@color/black"
-        android:backgroundTint="@color/kuning"></Button>
+        style="@style/BtnBackground"></Button>
 
 
     <ImageView
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/kuning"
+        style="@style/BtnBackground"
         android:src="@drawable/save_button_baseline"
         app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator.Medium"
         >
