--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,38 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.TUBES1" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/grey</item>
+
+        <item name="colorAccent">@color/kuningDark</item>
+    </style>
+
+    <style name="Screen">
+        <item name="android:background">@color/black</item>
+    </style>
+
+    <style name="ToolbarBackground">
+        <item name="android:background">@color/grey</item>
+    </style>
+
+    <style name="BtnBackground">
+        <item name="android:backgroundTint">@color/kuningDark</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="BtnBackground2">
+        <item name="android:backgroundTint">@color/biruDark</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SideBackground">
+        <item name="android:background">@color/grey</item>
+    </style>
+
+    <style name="TextColor">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="TextColorAccent">
+        <item name="android:textColor">@color/lightgrey</item>
     </style>
 </resources>
