update detail, delete story, side menu

--- a/app/src/main/res/layout/fragment_detail_konten.xml
+++ b/app/src/main/res/layout/fragment_detail_konten.xml
@@ -48,22 +48,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="right">
+
+
+        <Button
+            android:id="@+id/del_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Delete Story"
+            android:backgroundTint="@color/merah"
+            />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         style="@style/BtnBackground"
         android:src="@drawable/edit_icon_foreground" />
-
-
+    </LinearLayout>
 </LinearLayout>
