--- a/app/src/main/res/layout/fragment_sidemenu.xml
+++ b/app/src/main/res/layout/fragment_sidemenu.xml
@@ -1,50 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20sp"
+    android:clickable="true"
+    android:focusable="true"
     style="@style/SideBackground">
-
-    <TextView
-        android:id="@+id/btn_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:textSize="15dp"
-        android:layout_marginTop="30dp"
-        android:clickable="true"
-        android:padding="5sp"/>
-
-    <TextView
-        android:id="@+id/btn_addDiary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Your Diary"
-        android:textSize="15dp"
-        android:layout_marginTop="40dp"
-        android:padding="5sp"
-        android:clickable="true" />
-
+    
     <LinearLayout
-        android:layout_marginTop="40dp"
-        android:padding="5sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
         <TextView
+            android:id="@+id/btn_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:textSize="15dp"
+            android:layout_marginTop="30dp"
+            android:clickable="true"
+            android:padding="5sp"/>
+
+        <TextView
+            android:id="@+id/btn_addDiary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dark_mode"
-            android:layout_marginRight="60dp"
-            android:textSize="15dp"></TextView>
+            android:text="Add Your Diary"
+            android:textSize="15dp"
+            android:layout_marginTop="40dp"
+            android:padding="5sp"
+            android:clickable="true" />
 
-        <Switch
-            android:id="@+id/switch_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </Switch>
+        <LinearLayout
+            android:layout_marginTop="40dp"
+            android:padding="5sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dark_mode"
+                android:layout_marginRight="60dp"
+                android:textSize="15dp"></TextView>
+
+            <Switch
+                android:id="@+id/switch_mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </Switch>
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
