--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="lightgrey">#939292</color>
     <color name="kuningDark">#827717</color>
     <color name="biruDark">#0D47A1</color>
+    <color name="merah">#8B0000</color>
 </resources>
