--- a/app/src/main/res/layout/fragment_sidemenu.xml
+++ b/app/src/main/res/layout/fragment_sidemenu.xml
@@ -46,13 +46,13 @@
                 android:layout_height="wrap_content"
                 android:text="@string/dark_mode"
                 android:layout_marginRight="60dp"
-                android:textSize="15dp"></TextView>
+                android:textSize="15dp"/>
 
-            <Switch
+            <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-            </Switch>
+            </androidx.appcompat.widget.SwitchCompat>
         </LinearLayout>
 
     </LinearLayout>
