--- a/app/src/main/res/layout/fragment_tambah_konten.xml
+++ b/app/src/main/res/layout/fragment_tambah_konten.xml
@@ -41,11 +41,17 @@
         android:text="@string/story">
     </TextView>
 
-    <EditText
-        android:id="@+id/desc_diary"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Write your diary story"></EditText>
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/desc_diary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Write your diary story"
+            android:maxLines="10"
+            ></EditText>
+    </ScrollView>
 
     <TextView
         android:layout_width="match_parent"
