--- a/app/src/main/res/layout/fragment_detail_konten.xml
+++ b/app/src/main/res/layout/fragment_detail_konten.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/Screen"
     android:orientation="vertical">
     <TextView
         android:id="@+id/btn_back"
@@ -66,6 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="Delete Story"
+            style="@style/TextColorBtnDel"
             android:backgroundTint="@color/merah"
             />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
