--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -33,6 +33,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="TextColorBtnDel">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="TextColorAccent">
         <item name="android:textColor">@color/lightgrey</item>
     </style>
