--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,6 +31,10 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="TextColorBtnDel">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="TextColorAccent">
         <item name="android:textColor">@color/biru</item>
     </style>
